fixed the alignment issue on the about-us page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3689,7 +3689,7 @@ footer {
 .inner {
 	padding: 4em 0 2em 0;
 	margin: 0 auto;
-	max-width: 65em;
+	max-width: 70em;
 	width: calc(100% - 6em);
 }
 
